fix(comps): fix low contrast borders of cards with new auto margin utils
This commit brings several changes with it listed as follows:

- align arrow buttons text to left
- fix `border-color-scale` to 40%
- set multiplier of `card-color-head-border-scale` to 1.5
- add auto margin classes with support for all viewports

--- a/mizui/comps/_buttons.scss
+++ b/mizui/comps/_buttons.scss
@@ -71,6 +71,7 @@ button {
   background: $btn-arrow-bg !important;
   color: $btn-arrow-color !important;
   border: none;
+  text-align: left;
 
   &::after {
     content: '\2192';
